--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div id="root" :style="swappin ? 'user-select: none;' : ''" @mouseup="reorder" @mouseleave="reorder">
         <h1>Bozza Reordenador</h1>
-        <div style="display: flex; flex-direction: column;" @mousemove="mouseMove($event)">
+        <div style="display: flex; flex-direction: column;" @mousemove="mouseMove($event)" @mtouchmove="mouseMove($event)">
             <div style="width:100%; height:10px; background-color: lavender;" @mouseover=changeIndex(-1)></div>
             <div v-for="el, index in els"
             :class="index === index2 ? 'current' : ''"
