--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             >
                <div 
                style="padding: 2em;"
-               :style="cachedIndex == index ? 'background-color: lightgray' : ''">
+               :style="cachedIndex == index ? 'background-color: lightgray; margin-bottom: 15px;' : ''">
                <i :class="el.icona"></i>
                 <span>
                     {{ el.nome }}
